Bug#16172 DECIMAL data type processed incorrectly issue an 'overflow warning' if result value is bigger than max possible value

include/decimal.h:
  Bug#16172 DECIMAL data type processed incorrectly
  new function decimal_intg()
mysql-test/r/cast.result:
  Bug#16172 DECIMAL data type processed incorrectly
  result fix
mysql-test/r/type_newdecimal.result:
  Bug#16172 DECIMAL data type processed incorrectly
  test result
mysql-test/r/view.result:
  Bug#16172 DECIMAL data type processed incorrectly
  result fix
mysql-test/t/type_newdecimal.test:
  Bug#16172 DECIMAL data type processed incorrectly
  test case
sql/item_create.cc:
  Bug#16172 DECIMAL data type processed incorrectly
  do not increase decimal part on 2(according to manual)
sql/my_decimal.h:
  Bug#16172 DECIMAL data type processed incorrectly
  new function my_decimal_intg()
strings/decimal.c:
  Bug#16172 DECIMAL data type processed incorrectly
  new function decimal_intg()